<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">


    <View
        android:id="@+id/espuma_bg"
        android:layout_width="434dp"
        android:layout_height="431dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/espuma_bg"
        android:contentDescription="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/bigbubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="557dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/bestBeer"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_marginTop="88dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="56sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_bestBeer"
        android:layout_width="192dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:gravity="top"
        android:text="@string/firstBeer"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/et_beerName"
        app:layout_constraintStart_toStartOf="@+id/et_beerName"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.896"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_beerName"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:contentDescription="@string/beerName"
        android:ems="10"
        android:hint="@string/beerName"
        android:inputType="textPersonName"
        android:text="@string/beerName"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_mls"
        app:layout_constraintTop_toTopOf="@+id/espuma_bg"
        app:layout_constraintVertical_bias="0.562"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/et_mls"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:contentDescription="@string/mls"
        android:ems="10"
        android:hint="@string/mls"
        android:inputType="textPersonName"
        android:text="@string/mls"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/et_price"
        app:layout_constraintStart_toStartOf="@+id/et_price"
        app:layout_constraintTop_toBottomOf="@+id/et_beerName"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginBottom="208dp"
        android:alpha="0.7"
        android:contentDescription="@string/price"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:text="@string/price"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <View
        android:id="@+id/bigbubblefull"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="112dp"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_price"
        app:layout_constraintVertical_bias="1.0"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/bigbubble2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/bigbubbledown"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439"
        android:layout_alignParentStart="false" />

    <View
        android:id="@+id/bigbubble"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        android:layout_alignParentStart="true" />

    <!-- BUBBLES END -->
    <!-- BUBBLES END -->

    <ImageButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/buttonnext" />

    <ImageButton
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/helpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/buttonhelp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="31dp"
        android:layout_height="15dp"
        android:text="@string/help"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonHelp"
        app:layout_constraintVertical_bias="0.272" />


</androidx.constraintlayout.widget.ConstraintLayout>