<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/espuma_bg"
        android:layout_width="434dp"
        android:layout_height="431dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/espuma_bg"
        android:contentDescription="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/bigbubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="557dp"
        android:text="@string/description"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/bestBeer"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_marginTop="88dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="56sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_bestBeer"
        android:layout_width="270dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:gravity="top"
        android:text="@string/secondBeer"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/et_beerName2"
        app:layout_constraintStart_toStartOf="@+id/et_beerName2"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.896" />

    <EditText
        android:id="@+id/et_beerName2"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:autofillHints=""
        android:contentDescription="@string/beerName"
        android:ems="10"
        android:hint="@string/beerName"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_mls2"
        app:layout_constraintTop_toTopOf="@+id/espuma_bg"
        app:layout_constraintVertical_bias="0.562"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_mls2"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:autofillHints=""
        android:contentDescription="@string/mls"
        android:ems="10"
        android:hint="@string/mls"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/et_price2"
        app:layout_constraintStart_toStartOf="@+id/et_price2"
        app:layout_constraintTop_toBottomOf="@+id/et_beerName2"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_price2"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginBottom="208dp"
        android:alpha="0.7"
        android:autofillHints=""
        android:contentDescription="@string/price"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bigbubblefull"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="112dp"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_price2"
        app:layout_constraintVertical_bias="1.0"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/bigbubble2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/bigbubbledown"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439"
        android:layout_alignParentStart="false" />

    <View
        android:id="@+id/bigbubble"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        android:layout_alignParentStart="true" />

    <!-- BUBBLES END -->
    <!-- BUBBLES END -->

    <ImageButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/buttondone" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/backbutton" />


</androidx.constraintlayout.widget.ConstraintLayout>