<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">


    <View
        android:id="@+id/espuma_bg"
        android:layout_width="434dp"
        android:layout_height="431dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/espuma_bg"
        android:contentDescription="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/bigbubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_bestBeer"
        android:layout_width="188dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="tv_bestBeer"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:fontFamily="@font/montserrat"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="338dp" />

    <TextView
        android:id="@+id/resultBeer"
        android:layout_width="318dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="é a cerveja com melhor custo benefício"
        android:gravity="center_horizontal|top"
        android:text="@string/resultBeer"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/compared"
        android:layout_width="318dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/compared"
        android:gravity="center_horizontal|top"
        android:text="@string/compared"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="581dp" />

    <TextView
        android:id="@+id/resultBeer_valorLitro"
        android:layout_width="326dp"
        android:layout_height="103dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="é a cerveja com melhor custo benefício"
        android:gravity="center_horizontal|top"
        android:text="@string/resultBeer_valorLitro"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="492dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="557dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/bestBeer"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_marginTop="88dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="56sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/bigbubble2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/bigbubbledown"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439"
        android:layout_alignParentStart="false" />

    <View
        android:id="@+id/bigbubble"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="10"
        android:background="@drawable/bigbubblefull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/backbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>